Fixed issue with stars alignment

--- a/app/assets/stylesheets/partials/_stars.scss
+++ b/app/assets/stylesheets/partials/_stars.scss
@@ -56,7 +56,8 @@
     .stars {
         font-size: 24px;
         top: -5px;
-        left: 190px;
+        left: 50%;
+        margin-left: -42px;
 
         .star-icon {
             &:nth-of-type(1) {
